# Cloud-Native-AI-with-AIDD

class1/: main.py  pyproject.toml  test_main.py
class2/: main.py  pyproject.toml
class4/: .env  crudemain.py  main.py  pyproject.toml  test_main.py
class8containerizationbasic/: Dockerfile  main.py  pyproject.toml
crudapi/: main.py  pyproject.toml
task_managment_api/: .env  main.py  pyproject.toml
task_managment_api/app/: main.py
task_managment_api/app/api/: deps.py
task_managment_api/app/api/routes/: tasks.py  users.py
task_managment_api/app/core/: config.py  security.py
task_managment_api/app/db/: init_db.py  session.py
task_managment_api/app/models/: task.py  user.py
task_managment_api/app/schemas/: task.py  user.py
