[project]
name = "task-managment-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]
